2007-01-09  Timothy Brownawell  <tbrownaw@gmail.com>

	* outdated_indicator.{cc,hh}: Allows code that caches replys to
	find out when those replys may be outdated. Used by...
	* branch.{cc,hh}: Give us a concept of a 'branch'. Currently, this
	only lets you find branch heads. Branch heads are cached and only
	recalculated if certs have been added to / removed from the db.
	* database.{cc,hh}: Enable the use of outdated_indicator s for
	operations that return sets of certs.
	* many: Use the new way to calculate heads. Right now, the main
	effect is that 'automate heads' of the same branch is very fast
	on subsequent calls from 'automate stdio'.

2007-01-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* database.cc: Migrate to new sqlite3_prepare_v2 API.
	* sqlite/*: Import SQLite 3.3.9.

2007-01-08  Richard Levitte  <richard@levitte.org>

	* debian/control (Build-Depends-Indep): Have texlive-base-bin as
	an alternative to tetex-bin.
	* debian/changelog: Document the change for Debian.

2007-01-06  Thomas Keller  <me@thomaskeller.biz>

	* cmd_automate.cc: automate stdio now opens the database 
	before any command is triggered, this ensures that it early
	checks for a correct database version

2007-01-05  Thomas Moschny  <thomas.moschny@gmx.de>

	* netsync.cc (queue_delta_cmd): The invariant was based on the
	(wrong) assumption that an empty xdelta means no change.

2007-01-05  Matthew Nicholson  <matt@matt-land.com>

	* contrib/monotone.bash_completion: Updated completion for "mtn log".

2007-01-04  Zack Weinberg  <zackw@panix.com>

	* botan/gzip.cpp: Use specific subclasses of Botan::Exception
	throughout.
	* transforms.cc (error_in_transform): New function.
	(xform, pack, calculate_ident): Wrap use of Botan in try/catch,
	and call error_in_transform if we catch a Botan exception.
	(canonical_base64): Use Botan directly; add similar try/catch clause.
	(corruption_check): New unit test.

2007-01-03  Thomas Keller  <me@thomaskeller.biz>
