@@ -41,7 +41,7 @@ app_state::app_state()
 //    search_root(current_root_path()),
 //    diff_format(unified_diff),
     branch_is_sticky(false),
-    branches(*this)
+    project(*this)
 {
   db.set_app(this);
   lua.set_app(this);
