@@ -542,49 +542,6 @@ cert_revision_in_branch(revision_id const & rev,
                             branchname, app, pc);
 }
 
-namespace
-{
-  struct not_in_branch : public is_failure
-  {
-    app_state & app;
-    base64<cert_value > const & branch_encoded;
-    not_in_branch(app_state & app,
-                  base64<cert_value> const & branch_encoded)
-      : app(app), branch_encoded(branch_encoded)
-    {}
-    virtual bool operator()(revision_id const & rid)
-    {
-      vector< revision<cert> > certs;
-      app.db.get_revision_certs(rid,
-                                cert_name(branch_cert_name),
-                                branch_encoded,
-                                certs);
-      erase_bogus_certs(certs, app);
-      return certs.empty();
-    }
-  };
-}
-
-outdated_indicator
-get_branch_heads(cert_value const & branchname,
-                 app_state & app,
-                 set<revision_id> & heads)
-{
-  L(FL("getting heads of branch %s") % branchname);
-  base64<cert_value> branch_encoded;
-  encode_base64(branchname, branch_encoded);
-
-  outdated_indicator stamp;
-  stamp = app.db.get_revisions_with_cert(cert_name(branch_cert_name),
-                                         branch_encoded,
-                                         heads);
-
-  not_in_branch p(app, branch_encoded);
-  erase_ancestors_and_failures(heads, p, app);
-  L(FL("found heads of branch %s (%s heads)") % branchname % heads.size());
-  return stamp;
-}
-
 
 // "standard certs"
 
