@@ -17,7 +17,6 @@
 #include <boost/date_time/posix_time/posix_time.hpp>
 #include <time.h>
 
-#include "outdated_indicator.hh"
 #include "vocab.hh"
 
 // Certs associate an opaque name/value pair with a revision ID, and
@@ -90,10 +89,6 @@ cert_revision_in_branch(revision_id const & ctx,
                         app_state & app,
                         packet_consumer & pc);
 
-outdated_indicator
-get_branch_heads(cert_value const & branchname,
-                 app_state & app,
-                 std::set<revision_id> & heads);
 
 // We also define some common cert types, to help establish useful
 // conventions. you should use these unless you have a compelling
