@@ -7,6 +7,7 @@
 #include <map>
 #include <set>
 
+#include "cert.hh"
 #include "outdated_indicator.hh"
 #include "vocab.hh"
 
@@ -24,18 +25,19 @@ public:
   void heads(std::set<revision_id> & h);
 };
 
-class branch_list
+class project_t
 {
   app_state & app;
-  std::map<utf8, branch> known;
-  std::set<utf8> actual;
+  std::map<utf8, branch> known_branches;
+  std::set<utf8> actual_branches;
   outdated_indicator indicator;
 
 public:
-  branch_list(app_state & app);
+  project_t(app_state & app);
 
-  void list_all(std::set<utf8> & names);
-  branch & get(utf8 const & name);
+  void get_branch_list(std::set<utf8> & names);
+  void get_branch_list(utf8 const & glob, std::set<utf8> & names);
+  branch & get_branch(utf8 const & name);
 };
 
 #endif
